--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
   </head>
   <body>
     <div class="wrapper">
-      <img class="product" src="images/image-product-mobile.jpg" alt="" />
+      <picture class="product">
+        <source
+          class="desktop"
+          media="(min-width: 780px)"
+          srcset="images/image-product-desktop.jpg"
+          alt="" />
+        <img src="images/image-product-mobile.jpg" alt="" />
+      </picture>
+
       <div class="content">
         <div class="description">
           <h1 class="title">Perfume</h1>
@@ -31,10 +39,12 @@
           <p class="discount_price">$149.99</p>
           <p class="actual_price">$169.99</p>
         </div>
-        <button>
-          <img class="cart" src="images/icon-cart.svg" alt="" />
-          <p>Add to Cart</p>
-        </button>
+        <div>
+          <button>
+            <img class="cart" src="images/icon-cart.svg" alt="" />
+            <p>Add to Cart</p>
+          </button>
+        </div>
       </div>
     </div>
     <footer>
