Rendering of the desktop design with media query

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Ibitoy3</a>.
+        >. Coded by <a href="https://www.github.com/ibitoy3">Ibitoy3</a>.
       </div>
     </footer>
   </body>
